# HabitFlow

./: .env.example  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  completions.py  habits.py  stats.py
app/core/: exceptions.py  security.py  settings.py
app/db/: base.py  redis.py  session.py
app/models/: completion.py  habit.py  user.py
app/schemas/: completion.py  habit.py  stats.py  user.py
app/services/: auth.py  completion.py  habit.py  stats.py
