[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "habitflow"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    # Веб-фреймворк
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",

    # База данных
    "sqlalchemy[asyncio]==2.0.35",
#    "asyncpg==0.29.0",
    "alembic==1.13.3",
    "psycopg[binary]==3.2.3",

    # Валидация
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",

    # Авторизация
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.12",

    # Redis
    "redis[hiredis]==5.1.0",

    # Celery + RabbitMQ
    "celery==5.4.0",

    # Email
    "fastapi-mail==1.4.1",

    # Утилиты
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]